# Thermodynamics-simulation

./: .gitignore  Buttons.cpp  CMakeLists.txt  Homework report.docx  Molecule.cpp  Molecule.hpp  Molecules.cpp  Plot.cpp  Plot.hpp  README.md  Reactor.cpp  Reactor.hpp  ReactorBtns.hpp  Report on practical task.docx  Report.md  Vec.cpp  Vec.hpp  main.cpp
src/: Buttons.hpp  Molecules.hpp  Reactor.cpp  ReactorBtns.cpp  main.cpp
